welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: ';' expected but 'return' found.
		}return true;
                 ^